src/Common/common.css
@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Condensed&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Mulish&family=Ovo&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&family=Nova+Flat&display=swap");

.CommonScreen {
	background: url(../assets/Screen1\ BG.png);
	background-repeat: no-repeat;
	background-size: cover;
	height: 100vh;
	font-family: Poppins;
}

.navbar {
	padding-top: 20px;
}

.logo {
	height: 50px;
}

.nav-link {
	font-family: "Roboto", sans-serif;
	font-family: "Roboto Condensed", sans-serif;
	padding: 0 30px 0 30px !important;
	font-size: 20px;
}

.collapse {
	justify-content: flex-end;
}

.loginbutton {
	cursor: pointer;
}

@media only screen and (max-width: 1000px) {
	.nav-link {
		padding: 10px 0px 10px 10px !important;
	}
}

.Text1 {
	display: flex;
	flex-direction: column;
	padding-top: 100px;
	max-width: 500px;
	margin-left: 20px;
}
.text1stuff {
	color: white;
	font-size: 45px;
	margin: 0;
	width: 150%;
	font-family: "Fredoka One", cursive;
}

.smalltext {
	opacity: 0.6;
	color: white;
	font-weight: 300;
}

.Text1 button {
	color: black;
	font-size: 15px;
	padding: 10px;
	background-color: #fff;
	border: none;
	font-weight: 400;
	border-radius: 35px;
	font-family: Mulish;
	max-width: 100px;
	margin-top: 20px;
}

.devlink {
	color: white;
	opacity: 0.6;
	padding: 5px;
	font-size: 18px;
	font-family: "Nova Flat", cursive;
}

.devlink:hover {
	opacity: 1;
	color: white;
	text-decoration: none;
	transform: scale(1.1);
	padding-left: 40px;
}

.last {
	padding-bottom: 20px;
}

.App {
	height: 100vh;
	overflow: hidden;
}

.preloaderImg {
	height: 100vh;
	width: 100%;
	margin: auto;
	/* margin-top: -200px; */
}

